--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   width: 100vw;
   height: 100vb;
   @apply flex flex-col items-center; 
-  @apply bg-zinc-900 text-gray-50;
+  @apply bg-background text-gray-50;
 }
 
 #root{
